--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "babel-core": "^6.23.1",
     "babel-preset-stage-3": "^6.22.0",
+    "connect-redis": "^3.2.0",
     "express": "^4.14.1",
+    "express-session": "^1.15.1",
     "express-winston": "^2.2.0",
     "mongoose": "^4.8.4",
     "winston": "^2.3.1"
