--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "express-winston": "^2.2.0",
     "mongoose": "^4.8.4",
     "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "body-parser": "^1.17.1"
   }
 }
