--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-winston": "^2.2.0",
     "moment": "^2.18.1",
     "mongoose": "^4.9.1",
+    "qiniu": "^6.1.13",
     "winston": "^2.3.1"
   },
   "devDependencies": {
